--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -5,9 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carona</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+      .custom-nav {
+        background-color: #f8f9fa;
+      }
+
+      .custom-nav a {
+        color: #000;
+        text-decoration: none;
+      }
+
+      .custom-nav div {
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
+        justify-content: flex-end;
+      }
+
+      @media (min-width: 768px) {
+        .custom-nav {
+          padding: 1rem 2rem;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .custom-nav {
+          position: fixed;
+          bottom: 0;
+        }
+
+        .custom-nav div {
+          justify-content: space-between;
+        }
+
+        .custom-nav a {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          padding: 1rem 2rem;
+          width: 100%;
+        }
+
+        .custom-nav i {
+          padding-right: 6px;
+        }
+      }
+    </style>
   </head>
 <body>
-    <main>
+    <nav class="w-100 custom-nav">
+      <div>
+        <a href="{% url 'ride:search_ride' %}">
+          <i class="bi bi-search"></i> <span>Buscar</span>
+        </a>
+        <a href="{% url 'ride:create_ride' %}">
+          <i class="bi bi-plus"></i> <span>Criar</span>
+        </a>
+        <a href="{% url 'ride:profile' %}">
+          <i class="bi bi-person-fill"></i> <span>Perfil</span>
+        </a>
+      </div>
+    </nav>
+
+    <main class="p-3">
         {% block content %}{% endblock %}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
