--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -52,6 +52,8 @@
         }
       }
     </style>
+    {% block custom_css %}
+    {% endblock %}
   </head>
 <body>
     <nav class="w-100 custom-nav">
@@ -72,5 +74,7 @@
         {% block content %}{% endblock %}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    {% block custom_js %}
+    {% endblock %}
+  </body>
 </html>
