--- a/ride/templates/create_ride.html
+++ b/ride/templates/create_ride.html
@@ -1,7 +1,71 @@
 {% extends "base.html" %}
 
+{% block custom_css %}
+  <style>
+    #map {
+      height: 400px;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 
 <h1>Criar carona</h1>
 
+<input id="searchTextField" type="text" size="50" placeholder="Enter a location" autocomplete="on" runat="server" />
+<input id="city2" name="city2" />
+<input id="cityLat" name="cityLat" />
+<input id="cityLng" name="cityLng" />
+<div id="map"></div>
+
+{% endblock %}
+
+{% block custom_js %}
+<script src="http://maps.googleapis.com/maps/api/js?key=&libraries=places&" type="text/javascript"></script>
+<script type='text/javascript'>
+  function initialize() {
+    map = new google.maps.Map(document.getElementById("map"), {
+        center: { lat: -22.903, lng: -43.132 },
+        zoom: 11,
+    });
+
+    marker = new google.maps.Marker({
+        map,
+        position: { lat: -22.903, lng: -43.132 },
+        draggable: true,
+        animation: google.maps.Animation.DROP // Animação ao colocar o marcador
+    });
+
+    var input = document.getElementById('searchTextField');
+    var autocomplete = new google.maps.places.Autocomplete(input);
+    google.maps.event.addListener(autocomplete, 'place_changed', function () {
+        var place = autocomplete.getPlace();
+        if (!place.geometry) {
+            return;
+        }
+        map.setCenter(place.geometry.location);
+        marker.setPosition(place.geometry.location);
+        document.getElementById('city2').value = place.name;
+        document.getElementById('cityLat').value = place.geometry.location.lat();
+        document.getElementById('cityLng').value = place.geometry.location.lng();
+    });
+
+    google.maps.event.addListener(marker, 'dragend', function () {
+      var pos = marker.getPosition();
+      map.setCenter(pos);
+      document.getElementById('cityLat').value = pos.lat();
+      document.getElementById('cityLng').value = pos.lng();
+
+      var geocoder = new google.maps.Geocoder();
+      geocoder.geocode({ 'location': pos }, function (results, status) {
+        if (status === 'OK' && results[0]) {
+          input.value = results[0].formatted_address;
+          document.getElementById('city2').value = results[0].address_components[0].long_name;
+        }
+      });
+    });
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 {% endblock %}
