--- a/ride/templates/profile.html
+++ b/ride/templates/profile.html
@@ -1,7 +1,43 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<h1>Perfil</h1>
+  <div class="container justify-content-center align-items-center vh-100">
+    <div class="row">
+      <h1 class="text-center mt-5">PERFIL</h1>
+    </div>
+    <hr class="my-5">
+    <div class="row">
+      <div class="col-12">
+        <div class="card shadow" style="border-radius: 15px;">
+          <div class="card-body text-center">
+            <div class="mt-3 mb-4">
+              <img src="https://via.placeholder.com/300"
+                class="rounded-circle img-fluid" style="width: 150px;" />
+            </div>
+            <h4 class="mb-2">{{ profile.user }}</h4>
+            <p class="text-muted">Curso</p>
+            <div class="d-flex justify-content-start rounded-3 p-2 my-5"
+              style="background-color: #efefef;">
+              <div class="text-start">
+                <p class="medium text-muted mb-1">Nº de Caronas</p>
+                <p class="mb-0">41</p>
+              </div>
+              <div class="px-3 text-start">
+                <p class="medium text-muted mb-1">Avaliação</p>
+                <p class="mb-0">{{ profile.rating }}</p>
+              </div>
+              <div class="text-start">
+                <p class="medium text-muted mb-1">Carro</p>
+                <p class="mb-0">modelo</p>
+              </div>
+            </div>
+            <button type="button" class="btn btn-outline-primary btn-rounded btn-lg">
+              Editar Perfil
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
