--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -2,6 +2,41 @@
 
 {% block content %}
 
-<h1>Buscar carona</h1>
+<h1></h1>
+  <div class="container justify-content-center align-items-center vh-100">
+    <div class="row">
+      <h1 class="text-center mt-5">BUSCAR CARONA</h1>
+    </div>
+    <hr class="my-5">
+    <div class="row">
+      <div class="col-12">
+        <div class="card shadow" style="border-radius: 15px; width: 40%; margin: auto;">
+          <div class="card-body text-center">
+            <form action="{% url 'ride:search_ride' %}" method="post">
+
+              {% csrf_token %}
+              <div class="mb-4">
+                <label for="starting_point" class="form-label">Local de Partida:</label>
+                <input type="text" class="form-control" id="starting_point" name="starting_point">
+              </div>
+              <div class="mb-4">
+                <label for="destination" class="form-label">Destino:</label>
+                <input type="text" class="form-control" id="destination" name="destination">
+              </div>
+              <div class="mb-4">
+                <label for="datetime" class="form-label">Data e Hora:</label>
+                <input type="datetime-local" class="form-control" id="datetime" name="datetime">
+              </div>
+              <div class="mb-4">
+                <label for="passengers" class="form-label">Quantidade de Passageiros:</label>
+                <input type="number" class="form-control" id="passengers" name="passengers">
+              </div>
+              <button type="submit" class="btn btn-outline-primary btn-rounded btn-lg">Buscar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
