add start point map to the search ride template

--- a/ride/templates/create_ride.html
+++ b/ride/templates/create_ride.html
@@ -56,7 +56,7 @@
 {% endblock %}
 
 {% block custom_js %}
-<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC7ifTOAEW1hA0RzYEUlg756Vw-f5Hg_Yw&libraries=places&" type="text/javascript"></script>
+<script src="http://maps.googleapis.com/maps/api/js?&libraries=places&" type="text/javascript"></script>
 <script type='text/javascript'>
   function initializeStartPoint() {
     map = new google.maps.Map(document.getElementById("starting-point-map"), {
