--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
+{% block custom_css %}
+  <style>
+    .map {
+      height: 180px;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 
 <h1></h1>
@@ -16,8 +24,12 @@
 
               {% csrf_token %}
               <div class="mb-4">
-                <label for="starting_point" class="form-label">Local de Partida:</label>
-                <input type="text" class="form-control" id="starting_point" name="starting_point">
+                <label for="search-start-point-field">Local de Partida:</label>
+                <input id="search-start-point-field" class="form-control mb-2" type="text" placeholder="Digite o endereço..." autocomplete="on" runat="server" />
+                <input hidden id="search-start-point-field-city2" />
+                <input hidden id="search-start-point-field-city-lat" />
+                <input hidden id="search-start-point-field-city-lng" />
+                <div class="map" id="starting-point-map"></div>
               </div>
               <div class="mb-4">
                 <label for="destination" class="form-label">Destino:</label>
@@ -39,4 +51,54 @@
     </div>
   </div>
 
+{% endblock %}
+
+{% block custom_js %}
+<script src="http://maps.googleapis.com/maps/api/js?&libraries=places&" type="text/javascript"></script>
+<script type='text/javascript'>
+  function initialize() {
+    map = new google.maps.Map(document.getElementById("starting-point-map"), {
+        center: { lat: -22.903, lng: -43.132 },
+        zoom: 11,
+    });
+
+    marker = new google.maps.Marker({
+        map,
+        position: { lat: -22.903, lng: -43.132 },
+        draggable: true,
+        animation: google.maps.Animation.DROP
+    });
+
+    var input = document.getElementById('search-start-point-field');
+    var autocomplete = new google.maps.places.Autocomplete(input);
+    google.maps.event.addListener(autocomplete, 'place_changed', function () {
+        var place = autocomplete.getPlace();
+        if (!place.geometry) {
+            return;
+        }
+        map.panTo(place.geometry.location);
+        marker.setPosition(place.geometry.location);
+        document.getElementById('search-start-point-field-city2').value = place.name;
+        document.getElementById('search-start-point-field-city-lat').value = place.geometry.location.lat();
+        document.getElementById('search-start-point-field-city-lng').value = place.geometry.location.lng();
+    });
+
+    google.maps.event.addListener(marker, 'dragend', function () {
+      var pos = marker.getPosition();
+      map.panTo(pos);
+      document.getElementById('search-start-point-field-city-lat').value = pos.lat();
+      document.getElementById('search-start-point-field-city-lng').value = pos.lng();
+
+      var geocoder = new google.maps.Geocoder();
+      geocoder.geocode({ 'location': pos }, function (results, status) {
+        if (status === 'OK' && results[0]) {
+          input.value = results[0].formatted_address;
+          document.getElementById('city2').value = results[0].address_components[0].long_name;
+        }
+      });
+    });
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 {% endblock %}
