--- a/ride/templates/login.html
+++ b/ride/templates/login.html
@@ -1,35 +1,46 @@
-{% extends "base.html" %}
 
-{% block content %}
-    <div class="container">
-        <form method="post">
-            {% csrf_token %}
-            <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Login</div>
-                    <div class="panel-body">
-                        {% if error_message %}
-                            <p class="bg-danger p-d ml-b">{{ error_message }}</p>
-                        {% endif %}
-                        <div class="form-group clearfix">
-                            <label for="username" class="col-md-4 control-label text-right">Username:</label>
-                            <div class="col-md-6">
-                                <input name="username" value="" type="text" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group clearfix">
-                            <label for="password" class="col-md-4 control-label text-right">Password:</label>
-                            <div class="col-md-6">
-                                <input name="password" type="password" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-md-offset-4">
-                            <input name="login" type="submit" value="Login" class="btn btn-success" /> &nbsp;
-                            <a >or Register</a>
-                        </div>
-                    </div>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carona</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        .login-container {
+            display: flex;
+            align-items: center; /* Alinha verticalmente ao centro */
+            justify-content: center; /* Alinha horizontalmente ao centro */
+        }
+        .login-form {
+            padding: 25px;
+            border: 1px solid #ccc; /* Adiciona uma borda ao redor do formulário */
+            border-radius: 8px; /* Arredonda as bordas */
+            width: 100%;
+            max-width: 400px; /* Define uma largura máxima para o formulário */
+        }
+    </style>
+  </head>
+<body>
+    <div class="container login-container mt-5">
+        <div class="login-form">
+            <h2 class="text-center">Login</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Usuário</label>
+                    <input type="text" class="form-control" id="username" required>
                 </div>
-            </div>
-        </form>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="password" required>
+                </div>
+                <div class="d-grid gap-2">
+                    <a href="{% url 'ride:search_ride' %}" class="btn btn-primary">Login</a>
+                    <button type="button" class="btn btn-secondary">Registrar</button>
+                </div>
+            </form>
+        </div>
     </div>
-{% endblock %}
+  </body>
+</html>
