--- a/ride/templates/search_ride.html
+++ b/ride/templates/search_ride.html
@@ -54,12 +54,12 @@
 {% endblock %}
 
 {% block custom_js %}
-<script src="http://maps.googleapis.com/maps/api/js?&libraries=places&" type="text/javascript"></script>
+<script src="http://maps.googleapis.com/maps/api/js?key=&libraries=places&" type="text/javascript"></script>
 <script type='text/javascript'>
   function initialize() {
     map = new google.maps.Map(document.getElementById("starting-point-map"), {
         center: { lat: -22.903, lng: -43.132 },
-        zoom: 11,
+        zoom: 12,
     });
 
     marker = new google.maps.Marker({
