--- a/ride/templates/create_ride.html
+++ b/ride/templates/create_ride.html
@@ -17,8 +17,15 @@
     {% csrf_token %}
     <div class="d-flex flex-column">
       <div class="form-group mb-3">
-        <label for="id_car">Carro</label>
-        {{ form.car }}
+        {% if form.car.help_text %}
+        <div class="alert alert-warning" role="alert">
+          <b>Atenção</b><br>
+          {{ form.car.help_text }}
+        </div>
+        {% else %}
+          <label for="id_car">Carro</label>
+          {{ form.car }}
+        {% endif %}
       </div>
       <div class="row">
         <div class="col-md-6">
@@ -35,19 +42,19 @@
         </div>
       </div>
       <div class="form-group mb-3">
-        <label for="search-start-point-field">Ponto de partida</label>
-        <input id="search-start-point-field" class="form-control mb-2" type="text" placeholder="Digite o endereço..." autocomplete="on" runat="server" />
-        <input hidden id="search-start-point-field-city2" />
-        <input hidden id="search-start-point-field-city-lat" />
-        <input hidden id="search-start-point-field-city-lng" />
+        <label for="search-starting-point-field">Ponto de partida</label>
+        <input id="search-starting-point-field" class="form-control mb-2" type="text" placeholder="Digite o endereço..." autocomplete="on" runat="server" />
+        <input hidden name="starting_point_address" id="starting-point-address" />
+        <input hidden name="starting_point_latitude" id="starting-point-latitude" />
+        <input hidden name="starting_point_longitude" id="starting-point-longitude" />
         <div class="map" id="starting-point-map"></div>
       </div>
       <div class="form-group mb-3">
         <label>Destino</label>
         <input id="search-destination-field" class="form-control mb-2" type="text" placeholder="Digite o endereço..." autocomplete="on" runat="server" />
-        <input hidden id="search-destination-field-city2" />
-        <input hidden id="search-destination-field-city-lat" />
-        <input hidden id="search-destination-field-city-lng" />
+        <input hidden name="destination_address" id="destination-address" />
+        <input hidden name="destination_latitude" id="destination-latitude" />
+        <input hidden name="destination_longitude" id="destination-longitude" />
         <div class="map" id="destination-map"></div>
       </div>
       <button class="btn btn-dark align-self-end" type="submit">Confirmar</button>
@@ -73,7 +80,7 @@
         animation: google.maps.Animation.DROP
     });
 
-    var input = document.getElementById('search-start-point-field');
+    var input = document.getElementById('search-starting-point-field');
     var autocomplete = new google.maps.places.Autocomplete(input);
     google.maps.event.addListener(autocomplete, 'place_changed', function () {
         var place = autocomplete.getPlace();
@@ -82,16 +89,16 @@
         }
         map.panTo(place.geometry.location);
         marker.setPosition(place.geometry.location);
-        document.getElementById('search-start-point-field-city2').value = place.name;
-        document.getElementById('search-start-point-field-city-lat').value = place.geometry.location.lat();
-        document.getElementById('search-start-point-field-city-lng').value = place.geometry.location.lng();
+        document.getElementById('starting-point-address').value = place.name;
+        document.getElementById('starting-point-latitude').value = place.geometry.location.lat();
+        document.getElementById('starting-point-longitude').value = place.geometry.location.lng();
     });
 
     google.maps.event.addListener(marker, 'dragend', function () {
       var pos = marker.getPosition();
       map.panTo(pos);
-      document.getElementById('search-start-point-field-city-lat').value = pos.lat();
-      document.getElementById('search-start-point-field-city-lng').value = pos.lng();
+      document.getElementById('starting-point-latitude').value = pos.lat();
+      document.getElementById('starting-point-longitude').value = pos.lng();
 
       var geocoder = new google.maps.Geocoder();
       geocoder.geocode({ 'location': pos }, function (results, status) {
@@ -125,16 +132,16 @@
         }
         map.panTo(place.geometry.location);
         marker.setPosition(place.geometry.location);
-        document.getElementById('search-destination-field-city2').value = place.name;
-        document.getElementById('search-destination-field-city-lat').value = place.geometry.location.lat();
-        document.getElementById('search-destination-field-city-lng').value = place.geometry.location.lng();
+        document.getElementById('destination-address').value = place.name;
+        document.getElementById('destination-latitude').value = place.geometry.location.lat();
+        document.getElementById('destination-longitude').value = place.geometry.location.lng();
     });
 
     google.maps.event.addListener(marker, 'dragend', function () {
       var pos = marker.getPosition();
       map.panTo(pos);
-      document.getElementById('search-destination-field-city-lat').value = pos.lat();
-      document.getElementById('search-destination-field-city-lng').value = pos.lng();
+      document.getElementById('destination-latitude').value = pos.lat();
+      document.getElementById('destination-longitude').value = pos.lng();
 
       var geocoder = new google.maps.Geocoder();
       geocoder.geocode({ 'location': pos }, function (results, status) {
