--- a/ride/templates/profile.html
+++ b/ride/templates/profile.html
@@ -6,18 +6,16 @@
       <h1 class="text-center mt-5">PERFIL</h1>
     </div>
     <hr class="my-5">
-    <div class="row">
-      <div class="col-12">
-        <div class="card shadow" style="border-radius: 15px;">
+    <div class="row justify-content-center">
+      <div class="col justify-content-center">
+        <div class="card shadow" style="border-radius: 15px; max-width: 40%; margin: auto;">
           <div class="card-body text-center">
             <div class="mt-3 mb-4">
-              <img src="https://via.placeholder.com/300"
-                class="rounded-circle img-fluid" style="width: 150px;" />
+              <img src="{{ profile.profile_picture.url }}" alt="Profile Picture" class="rounded-circle img-fluid" style="width: 150px;" />
             </div>
             <h4 class="mb-2">{{ profile.user }}</h4>
-            <p class="text-muted">Curso</p>
-            <div class="d-flex justify-content-start rounded-3 p-2 my-5"
-              style="background-color: #efefef;">
+            <p class="text-muted">{{ profile.course }}</p>
+            <div class="d-flex justify-content-start rounded-3 p-2 my-5" style="background-color: #efefef;">
               <div class="text-start">
                 <p class="medium text-muted mb-1">Nº de Caronas</p>
                 <p class="mb-0">41</p>
@@ -28,10 +26,10 @@
               </div>
               <div class="text-start">
                 <p class="medium text-muted mb-1">Carro</p>
-                <p class="mb-0">modelo</p>
+                <p class="mb-0">{{ profile.car }}</p>
               </div>
             </div>
-            <button type="button" class="btn btn-outline-primary btn-rounded btn-lg">
+            <button type="button" class="btn btn-outline-primary btn-rounded btn-lg" data-bs-toggle="modal" data-bs-target="#editProfileModal">
               Editar Perfil
             </button>
           </div>
@@ -40,4 +38,24 @@
     </div>
   </div>
 
+  <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editProfileModalLabel">Editar Perfil</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+              <button type="submit" class="btn btn-primary">Salvar mudanças</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
