--- a/ride/templates/registration/login.html
+++ b/ride/templates/registration/login.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="col-md-6 col-md-offset-4">
                             <input name="login" type="submit" value="Login" class="btn btn-success" /> &nbsp;
-                            <a >or Register</a>
+                            <a class="btn btn-primary" href="/signup">Create</a>
                         </div>
                     </div>
                 </div>
