--- a/ride/templates/registration/signup.html
+++ b/ride/templates/registration/signup.html
@@ -4,7 +4,7 @@
     <div class="container">
         <form method="post">
             {% csrf_token %}
-            {{form}}
+            {{form.as_p}}
             <button type="submit">Submit</button>
         </form>
     </div>
