--- a/ride/templates/registration/login.html
+++ b/ride/templates/registration/login.html
@@ -1,35 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
-        <form method="post">
-            {% csrf_token %}
-            <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Login</div>
-                    <div class="panel-body">
-                        {% if error_message %}
-                            <p class="bg-danger p-d ml-b">{{ error_message }}</p>
-                        {% endif %}
-                        <div class="form-group clearfix">
-                            <label for="username" class="col-md-4 control-label text-right">Username:</label>
-                            <div class="col-md-6">
-                                <input name="username" value="" type="text" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group clearfix">
-                            <label for="password" class="col-md-4 control-label text-right">Password:</label>
-                            <div class="col-md-6">
-                                <input name="password" type="password" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-md-offset-4">
-                            <input name="login" type="submit" value="Login" class="btn btn-success" /> &nbsp;
-                            <a class="btn btn-primary" href="/signup">Create</a>
-                        </div>
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="card" style="width: 30rem;">
+            <div class="card-body">
+                <h5 class="card-title text-center">Login</h5>
+                <form method="post">
+                    {% csrf_token %}
+                    {% if error_message %}
+                        <div class="alert alert-danger">{{ error_message }}</div>
+                    {% endif %}
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Username:</label>
+                        <input name="username" type="text" class="form-control" id="username" required>
                     </div>
-                </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password:</label>
+                        <input name="password" type="password" class="form-control" id="password" required>
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-success">Entrar</button>
+                        <a href="/signup" class="btn btn-primary">Criar Conta</a>
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 {% endblock %}
