--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -56,6 +56,7 @@
     {% endblock %}
   </head>
 <body>
+  {% if user.is_authenticated %}
     <nav class="w-100 custom-nav">
       <div>
         <a href="{% url 'ride:search_ride' %}">
@@ -72,6 +73,7 @@
         </a>
       </div>
     </nav>
+    {% endif %}
 
     <main class="p-3">
         {% block content %}{% endblock %}
