--- a/ride/templates/registration/login.html
+++ b/ride/templates/registration/login.html
@@ -4,18 +4,18 @@
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="card" style="width: 30rem;">
             <div class="card-body">
-                <h5 class="card-title text-center">Login</h5>
+                <h5 class="card-title text-center">Carona UFF</h5>
                 <form method="post">
                     {% csrf_token %}
                     {% if error_message %}
                         <div class="alert alert-danger">{{ error_message }}</div>
                     {% endif %}
                     <div class="mb-3">
-                        <label for="username" class="form-label">Username:</label>
+                        <label for="username" class="form-label">Nome de usuário:</label>
                         <input name="username" type="text" class="form-control" id="username" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password:</label>
+                        <label for="password" class="form-label">Senha:</label>
                         <input name="password" type="password" class="form-control" id="password" required>
                     </div>
                     <div class="d-grid gap-2">
