remove car field from models and from user profile form and fix profile picture upload

--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -71,6 +71,9 @@
         <a href="{% url 'ride:profile' %}">
           <i class="bi bi-person-fill"></i> <span>Perfil</span>
         </a>
+        <a href="{% url 'logout' %}">
+          <i class="bi bi-box-arrow-right"></i> <span>Sair</span>
+        </a>
       </div>
     </nav>
     {% endif %}
