--- a/ride/templates/profile.html
+++ b/ride/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% block content %}
 {% load static %}
   <div class="container justify-content-center align-items-center vh-100">
@@ -11,7 +12,11 @@
         <div class="card shadow" style="border-radius: 15px; max-width: 40%; margin: auto;">
           <div class="card-body text-center">
             <div class="mt-3 mb-4">
-              <img src="{% static profile.profile_picture.url %}" alt="Profile Picture" class="rounded-circle img-fluid" style="width: 150px;" />
+              {% if profile.profile_picture %}
+                <img src="{{ profile.profile_picture.url }}" alt="Foto de perfil" class="rounded-circle img-fluid" style="width: 150px;" />
+              {% else %}
+                <img src="{% static 'images/undefined_profile_image.jpg' %}" alt="Profile Picture" class="rounded-circle img-fluid" style="width: 150px;" />
+              {% endif %}
             </div>
             <h4 class="mb-2">{{ profile.user }}</h4>
             <p class="text-muted">{{ profile.course }}</p>
