--- a/ride/templates/profile.html
+++ b/ride/templates/profile.html
@@ -12,28 +12,20 @@
         <div class="card shadow" style="border-radius: 15px; max-width: 40%; margin: auto;">
           <div class="card-body text-center">
             <div class="mt-3 mb-4">
+              {% if profile.rating %}
+                <p style="font-size: 22px">
+                  <i class="bi bi-star-fill" style="color: gold;"></i>
+                  <span>{{ profile.rating }}</span>
+                </p>
+              {% endif %}
               {% if profile.profile_picture %}
-                <img src="{{ profile.profile_picture.url }}" alt="Foto de perfil" class="rounded-circle img-fluid" style="width: 150px;" />
+                <img src="{{ profile.profile_picture.url }}" alt="Foto de perfil" class="rounded-circle img-fluid" style="width: 150px; height: 150px; object-fit:cover" />
               {% else %}
                 <img src="{% static 'images/undefined_profile_image.jpg' %}" alt="Profile Picture" class="rounded-circle img-fluid" style="width: 150px;" />
               {% endif %}
             </div>
             <h4 class="mb-2">{{ profile.user }}</h4>
-            <p class="text-muted">{{ profile.course }}</p>
-            <div class="d-flex justify-content-start rounded-3 p-2 my-5" style="background-color: #efefef;">
-              <div class="text-start">
-                <p class="medium text-muted mb-1">Nº de Caronas</p>
-                <p class="mb-0">41</p>
-              </div>
-              <div class="px-3 text-start">
-                <p class="medium text-muted mb-1">Avaliação</p>
-                <p class="mb-0">{{ profile.rating }}</p>
-              </div>
-              <div class="text-start">
-                <p class="medium text-muted mb-1">Carro</p>
-                <p class="mb-0">{{ profile.car }}</p>
-              </div>
-            </div>
+            <p class="text-muted">{{ profile.degree }}</p>
             <button type="button" class="btn btn-outline-primary btn-rounded btn-lg" data-bs-toggle="modal" data-bs-target="#editProfileModal">
               Editar Perfil
             </button>
