--- a/ride/templates/base.html
+++ b/ride/templates/base.html
@@ -68,7 +68,7 @@
         <a href="{% url 'ride:create_ride' %}">
           <i class="bi bi-plus"></i> <span>Criar</span>
         </a>
-        <a href="{% url 'ride:profile' %}">
+        <a href="{% url 'ride:profile' user.id %}">
           <i class="bi bi-person-fill"></i> <span>Perfil</span>
         </a>
         <a href="{% url 'logout' %}">
